<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>PUUIDs</name>
    <groupId>com.zachduda</groupId>
    <artifactId>puuids</artifactId>
    <url>https://zachduda.com/puuids</url>
    <packaging>jar</packaging>
    <version>4.0.1</version>
    <description>Fully async per-player file saving all in one easy to use API.</description>
    <properties>
       <maven.compiler.release>21</maven.compiler.release>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <shade.plugin.version>3.6.1</shade.plugin.version>
       <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
    </properties>
    <!---<distributionManagement>
        <repository>
            <id>github</id>
            <name>puuids</name>
            <url>https://maven.pkg.github.com/zachduda/puuids</url>
        </repository>
    </distributionManagement>-->
    <distributionManagement>
        <repository>
            <id>zachduda-maven-release</id>
            <url>https://maven.zachduda.com/releases</url>
        </repository>
    </distributionManagement>
    <licenses>
        <license>
            <name>CC-BY-NC-v4</name>
            <url>https://creativecommons.org/licenses/by-nc/4.0/</url>
        </license>
    </licenses>
    <build>
        <resources>
            <resource>
                <directory>src</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.plugin.version}</version>
            <configuration>
              <release>${maven.compiler.release}</release>
            </configuration>
          </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.zachduda.puuids.metrics</shadedPattern>
                        </relocation>
                    </relocations>
                    <minimizeJar>true</minimizeJar>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>essentials-releases</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>arim-mvn-lgpl3</id>
            <url>https://mvn-repo.arim.space/lesser-gpl3/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>space.arim.morepaperlib</groupId>
            <artifactId>morepaperlib</artifactId>
            <version>0.5.3</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.2.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.21.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
